# spawn_model

./: CMakeLists.txt  README.md  package.xml
launch/: spawn_model_default.launch  spawn_model_dict.launch
src/: __init__.py  spawn_model.py  spawn_model_4obj_pos.py  spawn_model_obj_pos_fix.py  spawn_model_obj_pos_fix_exp2.py  spawn_model_obj_pos_fix_jsai2023_learn.py  spawn_model_obj_pos_fix_many_prob.py  spawn_model_obj_pos_fix_scinario3_argmax.py  spawn_model_obj_pos_random.py  spawn_model_pos_fix.py  spawn_model_random.py  spawn_model_target_place.py  spawn_object_by_dict.py  spawn_object_model.py
src/no use/: __init__.py  spawn_model_2obj_pos_prob.py  spawn_model_4obj_pos.py  spawn_model_obj_pos_fix.py  spawn_model_obj_pos_fix_many.py  spawn_model_obj_pos_fix_many_prob.py  spawn_model_obj_pos_fix_many_random.py  spawn_model_obj_pos_fix_scinario3_sample1.py  spawn_model_obj_pos_random.py  spawn_model_pos_fix.py  trial.py
